mongo-deployment-hostPath.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: gateway-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:6.0
        ports:
        - containerPort: 27017
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
        volumeMounts:
        - name: asad-data
          mountPath: /data/db   # MongoDB default storage path

      volumes:
      - name: asad-data
        hostPath:
          path: /ust-data
          type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: gateway-ns
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
