mongodb-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: mongodb
#   namespace: gateway-ns
# spec:
#   replicas: 1
#   strategy:
#     type: RollingUpdate
#     rollingUpdate:
#       maxUnavailable: 1
#       maxSurge: 1
#   selector:
#     matchLabels:
#       app: mongodb
#   template:
#     metadata:
#       labels:
#         app: mongodb
#     spec:
#       containers:
#       - name: mongodb
#         image: mongo:7-jammy
#         ports:
#         - containerPort: 27017
#         resources:
#           limits:
#             memory: "512Mi"
#             cpu: "200m"
#           requests:
#             memory: "256Mi"
#             cpu: "100m"
#         volumeMounts:
#           - name: asad-data
#             mountPath: /data/db
#       volumes:
#         - name: asad-data
#           emptyDir: 
#             sizeLimit: "512Mi"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mongodb-service
# spec:
#   selector:
#     app: mongodb
#   ports:
#   - port: 27017
#     targetPort: 27017
#   type: ClusterIP
 
 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: gateway-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:

      # MongoDB
      - name: mongodb
        image: mongo:7-jammy
        ports:
          - containerPort: 27017
        resources:
          limits:
            memory: "512Mi"
          requests:
            memory: "256Mi"
        volumeMounts:
          - name: asad-data
            mountPath: /data/db

      # 🔥 Memory eater (FIXED)
      - name: memory-eater
        image: busybox
        command: ["/bin/sh", "-c"]
        args:
          - |
            echo "Starting memory eater...";
            i=0;
            while true; do
              dd if=/dev/zero of=/tmp/file$i bs=10M count=1;
              i=$((i+1));
              echo "Allocated $i files";
              sleep 0.1;
            done
        resources:
          limits:
            memory: "300Mi"
          requests:
            memory: "100Mi"

      volumes:
        - name: asad-data
          emptyDir:
            sizeLimit: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: gateway-ns
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
